test: Add a unit test for command line file overrides.

--- a/packages/cspell/samples/latex/ebook/ebook.tex
+++ b/packages/cspell/samples/latex/ebook/ebook.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% eBook 
+% eBook
 % LaTeX Template
 % Version 1.0 (29/12/14)
 %
@@ -14,6 +14,9 @@
 % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% cspell:locale en
+% cspell:words Luis Cobo Grimms Gothel
 
 %----------------------------------------------------------------------------------------
 %	DOCUMENT CONFIGURATIONS AND INFORMATION
@@ -184,7 +187,7 @@ The heaven-born wind,'
 
 and went on eating without disturbing themselves. Hansel, who liked the taste of the roof, tore down a great piece of it, and Gretel pushed out the whole of one round window-pane, sat down, and enjoyed herself with it. Suddenly the door opened, and a woman as old as the hills, who supported herself on crutches, came creeping out. Hansel and Gretel were so terribly frightened that they let fall what they had in their hands. The old woman, however, nodded her head, and said: `Oh, you dear children, who has brought you here? do come in, and stay with me. No harm shall happen to you.' She took them both by the hand, and led them into her little house. Then good food was set before them, milk and pancakes, with sugar, apples, and nuts. Afterwards two pretty little beds were covered with clean white linen, and Hansel and Gretel lay down in them, and thought they were in heaven.
 
-The old woman had only pretended to be so kind; she was in reality a wicked witch, who lay in wait for children, and had only built the little house of bread in order to entice them there. When a child fell into her power, she killed it, cooked and ate it, and that was a feast day with her. Witches have red eyes, and cannot see far, but they have a keen scent like the beasts, and are aware when human beings draw near. When Hansel and Gretel came into her neighbourhood, she laughed with
+The old woman had only pretended to be so kind; she was in reality a wicked witch, who lay in wait for children, and had only built the little house of bread in order to entice them there. When a child fell into her power, she killed it, cooked and ate it, and that was a feast day with her. Witches have red eyes, and cannot see far, but they have a keen scent like the beasts, and are aware when human beings draw near. When Hansel and Gretel came into her neighborhood, she laughed with
 malice, and said mockingly: `I have them, they shall not escape me again!' Early in the morning before the children were awake, she was already up, and when she saw both of them sleeping and looking so pretty, with their plump and rosy cheeks she muttered to herself: `That will be a dainty mouthful!' Then she seized Hansel with her shrivelled hand, carried him into a little stable, and locked him in behind a grated door. Scream as he might, it would not help him. Then she went to
 Gretel, shook her till she awoke, and cried: `Get up, lazy thing, fetch some water, and cook something good for your brother, he is in the stable outside, and is to be made fat. When he is fat, I will eat him.' Gretel began to weep bitterly, but it was all in vain, for she was forced to do what the wicked witch commanded.
 
@@ -210,7 +213,7 @@ The duck came to them, and Hansel seated himself on its back, and told his siste
 %	CHAPTER THREE
 %----------------------------------------------------------------------------------------
 
-\chapter{Rupunzel}
+\chapter{Rapunzel}
 
 There were once a man and a woman who had long in vain wished for a child. At length the woman hoped that God was about to grant her desire. These people had a little window at the back of their house from which a splendid garden could be seen, which was full of the most beautiful flowers and herbs. It was, however, surrounded by a high wall, and no one dared to go into it because it belonged to an enchantress, who had great power and was dreaded by all the world. One day the woman was standing by this window and looking down into the garden, when she saw a bed which was planted with the most beautiful rampion (rapunzel), and it looked so fresh and green that she longed for it, she quite pined away, and began to look pale and miserable. Then her husband was alarmed, and asked: `What ails you, dear wife?' `Ah,' she replied, `if I can't eat some of the rampion, which is in the garden behind our house, I shall die.' The man, who loved her, thought: `Sooner than let your wife die, bring her some of the rampion yourself, let it cost what it will.' At twilight, he clambered down over the wall into the garden of the enchantress, hastily clutched a handful of rampion, and took it to his wife. She at once made herself a salad of it, and ate it greedily. It tasted so good to her--so very good, that the next day she longed for it three times as much as before. If he was to have any rest, her husband must once more descend into the garden. In the gloom of evening therefore, he let himself down again; but when he had clambered down the wall he was terribly afraid, for he saw the enchantress standing before him. `How can you dare,' said she with angry look, `descend into my garden and steal my rampion like a thief? You shall suffer for it!' `Ah,' answered he, `let mercy take the place of justice, I only made up my mind to do it out of necessity. My wife saw your rampion from the window, and felt such a longing for it that she would have died if she had not got some to eat.' Then the enchantress allowed her anger to be softened, and said to him: `If the case be as you say, I will allow you to take away with you as much rampion as you will, only I make one condition, you must give me the child which your wife will bring into the world; it shall be well treated, and I will care for it like a mother.' The man in his terror consented to everything, and when the woman was brought to bed, the enchantress appeared at once, gave the child the name of Rapunzel, and took it away with her.
 
